--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'   //Springdoc - OpenAPI UI 3.0
     implementation group: 'org.springdoc', name: 'springdoc-openapi-data-rest', version: '1.6.6'    //Springdoc - Data Rest
+
+    implementation group: 'org.mybatis.spring.boot', name: 'mybatis-spring-boot-starter', version: '2.2.2'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 }
 
 tasks.named('test') {
