--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
+# Database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://101.101.216.193:3306/pms
+spring.datasource.username=metis
+spring.datasource.password=metisInfo2010@#@
+
 # Tomcat Server
-server.port=8080
+#server.port=8080
 #server.compression.enabled=true
 
 # Swagger
-! PMS-API Docs Path
 springdoc.swagger-ui.path=/pms-api-docs.html
