--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.datasource.url=jdbc:mysql://101.101.216.193:3306/pms
 spring.datasource.username=metis
 spring.datasource.password=metisInfo2010@#@
 
+# View
+spring.mvc.view.prefix=/WEB-INF/view/
+spring.mvc.view.suffix=.jsp
+
 # Tomcat Server
-#server.port=8080
+#server.port=8090
 #server.compression.enabled=true
 
 # Swagger
-springdoc.swagger-ui.path=/pms-api-docs.html
+springdoc.swagger-ui.path=/api-docs.html
