--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 # Database
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://101.101.216.193:3306/pms
-spring.datasource.username=metis
-spring.datasource.password=metisInfo2010@#@
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://101.101.216.193:3306/pms
+spring.datasource.hikari.username=metis
+spring.datasource.hikari.password=metisInfo2010@#@
+
+# Data Source - Connection Pool
+spring.datasource.hikari.pool-name=Connection-Pool
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=5000
+spring.datasource.hikari.connection-init-sql=SELECT 1
+spring.datasource.hikari.validation-timeout=2000
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # View
 spring.mvc.view.prefix=/WEB-INF/view/
@@ -14,3 +24,12 @@ spring.mvc.view.suffix=.jsp
 
 # Swagger
 springdoc.swagger-ui.path=/api-docs.html
+springdoc.swagger-ui.operationsSorter=method
+#springdoc.swagger-ui.tags-sorter=alpha
+
+# Logging
+logging.level.pms.pmsapi=debug
+logging.level.org.springframework.boot.autoconfigure=error
+#logging.level.com.zaxxer.hikari=trace
+#logging.level.com.zaxxer.hikari.HikariConfig=debug
+#logging.level.com.zaxxer.hikari.HikariDataSource=debug
