1. 프로젝트명 변경 PMS-API -> PMS-Interface 2. 패키지 정리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ springdoc.swagger-ui.operationsSorter=method
 #springdoc.swagger-ui.tags-sorter=alpha
 
 # Logging
-logging.level.pms.pmsapi=debug
+logging.level.pms.api=debug
 logging.level.org.springframework.boot.autoconfigure=error
 #logging.level.com.zaxxer.hikari=trace
 #logging.level.com.zaxxer.hikari.HikariConfig=debug
