--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     implementation 'org.projectlombok:lombok:1.18.20'
+    testImplementation('org.projectlombok:lombok:1.18.20')
+    annotationProcessor('org.projectlombok:lombok:1.18.20')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.20')
 
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.6'   //Springdoc - OpenAPI UI 3.0
     implementation group: 'org.springdoc', name: 'springdoc-openapi-data-rest', version: '1.6.6'    //Springdoc - Data Rest
@@ -28,6 +31,8 @@ dependencies {
 
     implementation 'javax.servlet:jstl'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 tasks.named('test') {
