--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Database
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://101.101.216.193:3306/pms
-spring.datasource.hikari.username=metis
-spring.datasource.hikari.password=metisInfo2010@#@
+spring.datasource.hikari.jdbc-url=jdbc:mysql://db-85rb5.pub-cdb.ntruss.com:3306/etown
+spring.datasource.hikari.username=etwmngr
+spring.datasource.hikari.password=etown@2022
 
 # Data Source - Connection Pool
 spring.datasource.hikari.pool-name=Connection-Pool
