1. 공휴일 API 연동 2. 주석 오타 수정 3. 충방전 데이터 Exception 메세지 추가 4. war파일 빌드시 파일명 ROOT.war로 빌드

--- a/src/main/resources/interface.properties
+++ b/src/main/resources/interface.properties
@@ -28,3 +28,6 @@ weather.api.dust.station=이도동
 weather.api.dust.dataTerm=DAILY
 #미세 먼지 API 버전
 weather.api.dust.version=1.0
+
+# Holiday Interface - 공휴일 API 호출 관련 properties
+holiday.api.url=http://apis.data.go.kr/B090041/openapi/service/SpcdeInfoService/getRestDeInfo
