1. 날씨 / 공휴일 쪽 System.out -> logger 2. logback.xml 수정 3. logback 내부에서 if 문 사용을 위한 라이브러리 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,12 @@ springdoc.swagger-ui.operationsSorter=method
 #springdoc.swagger-ui.tags-sorter=alpha
 
 # Logging
-logging.level.pms.api=debug
-logging.level.org.springframework.boot.autoconfigure=error
+#로그 찍기 위한 환경 설정 - 개발용
+spring.profiles.active=dev
+#로그 찍기 위한 환경 설정 - 배포용
+#spring.profiles.active=svc
+#logging.level.pms.api=debug
+#logging.level.org.springframework.boot.autoconfigure=error
 #logging.level.com.zaxxer.hikari=trace
 #logging.level.com.zaxxer.hikari.HikariConfig=debug
 #logging.level.com.zaxxer.hikari.HikariDataSource=debug
