--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    implementation("org.codehaus.janino:janino:2.7.7")              //logback.xml에서 if 문 사용을 위한 부분
+    implementation("org.codehaus.janino:commons-compiler:2.7.7")    //logback.xml에서 if 문 사용을 위한 부분
 }
 
 tasks.named('test') {
