1. 한전 AMI 연계 추가 2. 중복 데이터 Exception -> DataIntegrityViolationException 3. 운영DB 정보 추가

--- a/src/main/resources/interface.properties
+++ b/src/main/resources/interface.properties
@@ -31,3 +31,15 @@ weather.api.dust.version=1.0
 
 # Holiday Interface - 공휴일 API 호출 관련 properties
 holiday.api.url=http://apis.data.go.kr/B090041/openapi/service/SpcdeInfoService/getRestDeInfo
+
+# KepcoAmi - 한전 AMI 정보(EDSM)
+#EDSM 서비스키
+edsm.api.serviceKey=8a368177bv5os995vpmm
+#응답 형식(json)
+edsm.api.returnType=02
+#고객번호 API URL
+edsm.api.customer.url=https://opm.kepco.co.kr:11080/OpenAPI/getCustNoList.do
+#계기번호 API URL
+edsm.api.meter.url=https://opm.kepco.co.kr:11080/OpenAPI/getCustMeterList.do
+#15분 단위 전력소비 데이터(일반) URL
+edsm.api.getMinuteUse.url=https://opm.kepco.co.kr:11080/OpenAPI/getMinuteLpData.do
