--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # Database
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+#개발DB
 spring.datasource.hikari.jdbc-url=jdbc:mysql://db-85rb5.pub-cdb.ntruss.com:3306/etown
+#운영DB
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://db-85rb5.pub-cdb.ntruss.com:3306/gridplus
 spring.datasource.hikari.username=etwmngr
 spring.datasource.hikari.password=etown@2022
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://101.101.216.193:3306/pms
