1. 한전 전력 소비 데이터 15분 -> 하루 API 변경 2. restTemplate read timeout 10초로 변경

--- a/src/main/resources/interface.properties
+++ b/src/main/resources/interface.properties
@@ -41,5 +41,5 @@ edsm.api.returnType=02
 edsm.api.customer.url=https://opm.kepco.co.kr:11080/OpenAPI/getCustNoList.do
 #계기번호 API URL
 edsm.api.meter.url=https://opm.kepco.co.kr:11080/OpenAPI/getCustMeterList.do
-#15분 단위 전력소비 데이터(일반) URL
-edsm.api.getMinuteUse.url=https://opm.kepco.co.kr:11080/OpenAPI/getMinuteLpData.do
+#하루 단위 전력소비 데이터(일반) URL
+edsm.api.getDayUse.url=https://opm.kepco.co.kr:11080/OpenAPI/getDayLpData.do
