1. 소스 최신화 2. model -> vo 3. 한전 AMI 연동 추가 4. 한전 계기번호/고객번호 성공할 때까지 계속 시도

--- a/src/main/resources/interface.properties
+++ b/src/main/resources/interface.properties
@@ -43,3 +43,8 @@ edsm.api.customer.url=https://opm.kepco.co.kr:11080/OpenAPI/getCustNoList.do
 edsm.api.meter.url=https://opm.kepco.co.kr:11080/OpenAPI/getCustMeterList.do
 #하루 단위 전력소비 데이터(일반) URL
 edsm.api.getDayUse.url=https://opm.kepco.co.kr:11080/OpenAPI/getDayLpData.do
+#15분 단위 전력소비 데이터 존재 안함 메세지 (일단위의 경우 API를 호출해서 에러메세지가 오지만, 15분 단위 데이터는 CALL 하지 않으므로 하드코딩)
+edsm.api.error.msg.noMinuteData=15분단위 전력소비 데이터가 존재하지 않습니다.
+#전력 소비 데이터 호출 결과 코드 (1 : 성공/ 0 : 실패)
+edsm.api.success=1
+edsm.api.error=0
