1. json 라이브러리 추가 2. SMP API 연동 3. 공공데이터 포털 인증키(레플러스) 변경

--- a/src/main/resources/interface.properties
+++ b/src/main/resources/interface.properties
@@ -1,6 +1,6 @@
-# Weather Interface - 초단기 예보 / 일몰,일출 / 미세 먼지 API 호출 관련 properties
-#공공 데이터 data.go.kr 인증키
-weather.api.serviceKey=aDVsltIrJTOtDLpTA6qnVPhVhaT%2FaciIUGI30aiipGikIAAZOI4KxfVFBqW9q3s%2B3xgVzKx6c3gJdUVGaNJ9Bg%3D%3D
+#공공 데이터 data.go.kr 인증키(레플러스 인증키)
+data.api.serviceKey=gCTbVrFmxCSPDycaWOjxTp2yug%2Bqddj63%2B1BAdUJhUxZFD8w1ahyklHMa4hDVb3MsbWuA3FePlZZ8P4y%2FLohtw%3D%3D
+# Weather - 초단기 예보 / 일몰,일출 / 미세 먼지 API 호출 관련 properties
 #응답 형식
 weather.api.dataType=JSON
 #페이지 번호
@@ -29,8 +29,15 @@ weather.api.dust.dataTerm=DAILY
 #미세 먼지 API 버전
 weather.api.dust.version=1.0
 
-# Holiday Interface - 공휴일 API 호출 관련 properties
+# Holiday - 공휴일 API 호출 관련 properties
+# 공휴일 API URL
 holiday.api.url=http://apis.data.go.kr/B090041/openapi/service/SpcdeInfoService/getRestDeInfo
+
+# smpLimitCost - 전력 거래소 계통 한계 가격 조회
+# 계통 한계 가격 조회 URL
+smpLimitCost.api.url=https://openapi.kpx.or.kr/openapi/smp1hToday/getSmp1hToday
+# 계통 한계 가격 지역 코드 - 제주 : 9
+smpLimitCost.api.code.jeju=9
 
 # KepcoAmi - 한전 AMI 정보(EDSM)
 #EDSM 서비스키
