--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
     implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
 
+    implementation group: 'org.json', name: 'json', version: '20210307'
     implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation("org.codehaus.janino:janino:2.7.7")              //logback.xml에서 if 문 사용을 위한 부분
