1. SMP 가격 정보 (제주 -> 육지, 제주) 2. 전력소비 데이터 주석 수정

--- a/src/main/resources/interface.properties
+++ b/src/main/resources/interface.properties
@@ -36,8 +36,8 @@ holiday.api.url=http://apis.data.go.kr/B090041/openapi/service/SpcdeInfoService/
 # smpLimitCost - 전력 거래소 계통 한계 가격 조회
 # 계통 한계 가격 조회 URL
 smpLimitCost.api.url=https://openapi.kpx.or.kr/openapi/smp1hToday/getSmp1hToday
-# 계통 한계 가격 지역 코드 - 제주 : 9
-smpLimitCost.api.code.jeju=9
+# 계통 한계 가격 지역 코드 - 육지 : 1 , 제주 : 9
+smpLimitCost.api.code=1,9
 
 # KepcoAmi - 한전 AMI 정보(EDSM)
 #EDSM 서비스키
