--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     implementation("org.codehaus.janino:janino:2.7.7")              //logback.xml에서 if 문 사용을 위한 부분
     implementation("org.codehaus.janino:commons-compiler:2.7.7")    //logback.xml에서 if 문 사용을 위한 부분
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 tasks.named('test') {
