운영 키 경로 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Database
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 #개발DB
-spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/etown
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/etown
 #운영DB
-#spring.datasource.hikari.jdbc-url=jdbc:mysql://db-85rb5.pub-cdb.ntruss.com:3306/gridplus
+spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/gridplus
 spring.datasource.hikari.username=etwmngr
 spring.datasource.hikari.password=etown@2022
 
@@ -32,9 +32,9 @@ springdoc.swagger-ui.operationsSorter=method
 
 # Logging
 #로그 찍기 위한 환경 설정 - 개발용
-spring.profiles.active=dev
+#spring.profiles.active=dev
 #로그 찍기 위한 환경 설정 - 배포용
-#spring.profiles.active=svc
+spring.profiles.active=svc
 #logging.level.pms.api=debug
 #logging.level.org.springframework.boot.autoconfigure=error
 #logging.level.com.zaxxer.hikari=trace
