--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation("org.codehaus.janino:commons-compiler:2.7.7")    //logback.xml에서 if 문 사용을 위한 부분
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation('javax.xml.bind:jaxb-api:2.3.0')
+    implementation('javax.activation:activation:1.1')
+    implementation('org.glassfish.jaxb:jaxb-runtime:2.3.0')
 }
 
 tasks.named('test') {
