--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 #개발DB
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/etown
+#spring.datasource.hikari.username=etwtester
+#spring.datasource.hikari.password=tester@2023
 #운영DB
 spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/gridplus
 spring.datasource.hikari.username=etwmngr
