계량값 업데이트 프로세스 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Database
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-#개발DB
+#\uAC1C\uBC1CDB
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/etown
 #spring.datasource.hikari.username=etwtester
 #spring.datasource.hikari.password=tester@2023
-#운영DB
+#\uC6B4\uC601DB
 spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/gridplus
 spring.datasource.hikari.username=etwmngr
 spring.datasource.hikari.password=etown@2022
@@ -33,9 +33,9 @@ springdoc.swagger-ui.operationsSorter=method
 #springdoc.swagger-ui.tags-sorter=alpha
 
 # Logging
-#로그 찍기 위한 환경 설정 - 개발용
+#\uB85C\uADF8 \uCC0D\uAE30 \uC704\uD55C \uD658\uACBD \uC124\uC815 - \uAC1C\uBC1C\uC6A9
 #spring.profiles.active=dev
-#로그 찍기 위한 환경 설정 - 배포용
+#\uB85C\uADF8 \uCC0D\uAE30 \uC704\uD55C \uD658\uACBD \uC124\uC815 - \uBC30\uD3EC\uC6A9
 spring.profiles.active=svc
 #logging.level.pms.api=debug
 #logging.level.org.springframework.boot.autoconfigure=error
