개발 서버 키파일 경로 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Database
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 #\uAC1C\uBC1CDB
-#spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/etown
-#spring.datasource.hikari.username=etwtester
-#spring.datasource.hikari.password=tester@2023
+spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/etown
+spring.datasource.hikari.username=etwtester
+spring.datasource.hikari.password=tester@2023
 #\uC6B4\uC601DB
-spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/gridplus
-spring.datasource.hikari.username=etwmngr
-spring.datasource.hikari.password=etown@2022
+#spring.datasource.hikari.jdbc-url=jdbc:mysql://db-g44jc.pub-cdb.ntruss.com:3306/gridplus
+#spring.datasource.hikari.username=etwmngr
+#spring.datasource.hikari.password=etown@2022
 
 # Data Source - Connection Pool
 spring.datasource.hikari.pool-name=Connection-Pool
@@ -34,9 +34,9 @@ springdoc.swagger-ui.operationsSorter=method
 
 # Logging
 #\uB85C\uADF8 \uCC0D\uAE30 \uC704\uD55C \uD658\uACBD \uC124\uC815 - \uAC1C\uBC1C\uC6A9
-#spring.profiles.active=dev
+spring.profiles.active=dev
 #\uB85C\uADF8 \uCC0D\uAE30 \uC704\uD55C \uD658\uACBD \uC124\uC815 - \uBC30\uD3EC\uC6A9
-spring.profiles.active=svc
+#spring.profiles.active=svc
 #logging.level.pms.api=debug
 #logging.level.org.springframework.boot.autoconfigure=error
 #logging.level.com.zaxxer.hikari=trace
